syntax = "proto3";
package nois.allocation.v1;

import "gogoproto/gogo.proto";
import "nois/allocation/v1/params.proto";
import "nois/allocation/v1/rewards.proto";

option go_package = "github.com/noislabs/noisd/x/allocation/types";

// GenesisState defines the allocation module's genesis state.
message GenesisState {
  Params params = 1 [
    (gogoproto.moretags) = "yaml:\"params\"",
    (gogoproto.nullable) = false
  ];
  repeated ValidatorReward validator_rewards = 2 [
    (gogoproto.moretags) = "yaml:\"validator_rewards\"",
    (gogoproto.nullable) = false
  ];
}
